Feat: Changed the old API call of calling the constructor for a more streamlined way using a fluent builder class. Also, heavily added javadocs to all the relevant methods a developer may call when registering new tooltips.