@@ -6,73 +6,66 @@ import net.fabricmc.api.ClientModInitializer;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 import static com.stalemated.customtooltips.CustomTooltipApiClient.LOGGER;
 
+/**
+ * A test class demonstrating how to use the {@link CustomTooltipApi} as a developer.
+ * This initializer registers several example tooltips dynamically during the client startup.
+ */
 @Environment(EnvType.CLIENT)
 public class CustomTooltipApiTest implements ClientModInitializer {
 
+    /**
+     * Called on the client initialization phase.
+     * Showcases different ways to build and register custom tooltips using the Fluent Builder pattern.
+     */
     @Override
     public void onInitializeClient() {
 
-        // These are different examples on how to use the public API
-
         // Rainbow effect tooltip on diamond swords
-        TooltipEntry rainbowSword = new TooltipEntry(
-                "minecraft:diamond_sword",
-                new ArrayList<>(Arrays.asList("✦ Legendary Sword ✦", "Forged in the Stars.")),
-                TooltipEntry.TooltipStyle.RAINBOW,
-                new ArrayList<>(),
-                true, true, false, false, false,
-                false, true,
-                TooltipEntry.TooltipPosition.TOP, 0,
-                0, 2L,
-                "minecraft:default"
-        );
+        TooltipEntry.builder("minecraft:diamond_sword")
+                .addLine("✦ Legendary Sword ✦")
+                .addLine("Forged in the Stars.")
+                .style(TooltipEntry.TooltipStyle.RAINBOW)
+                .bold(true)
+                .italic(true)
+                .position(TooltipEntry.TooltipPosition.TOP)
+                .tickrate(2L)
+                .register();
 
-        TooltipEntry rainbowSword2 = new TooltipEntry(
-                "minecraft:diamond_sword",
-                new ArrayList<>(Arrays.asList("Eternal Item")),
-                TooltipEntry.TooltipStyle.RAINBOW,
-                new ArrayList<>(),
-                true, false, false, false, false,
-                false, true,
-                TooltipEntry.TooltipPosition.BOTTOM, 0,
-                0, 1L,
-                "minecraft:default"
-        );
+        TooltipEntry.builder("minecraft:diamond_sword")
+                .addLine("Eternal Item")
+                .style(TooltipEntry.TooltipStyle.RAINBOW)
+                .bold(true)
+                .emptyLineBefore(true)
+                .position(TooltipEntry.TooltipPosition.BOTTOM)
+                .register();
 
         // Renames the golden apple with a custom static gradient
-        TooltipEntry godApple = new TooltipEntry(
-                "minecraft:golden_apple",
-                new ArrayList<>(Arrays.asList("Apple of the Gods")),
-                TooltipEntry.TooltipStyle.STATIC_GRADIENT,
-                new ArrayList<>(Arrays.asList("#FFD700", "#FF4500")),
-                true, false, false, false, false,
-                false, false,
-                TooltipEntry.TooltipPosition.REPLACE_NAME, 0,
-                0, 1L,
-                "minecraft:default"
-        );
+        TooltipEntry.builder("minecraft:golden_apple")
+                .addLine("Apple of the Gods")
+                .style(TooltipEntry.TooltipStyle.STATIC_GRADIENT)
+                .colors(List.of("#FFD700", "#FF4500"))
+                .bold(true)
+                .position(TooltipEntry.TooltipPosition.REPLACE_NAME)
+                .register();
 
-        // Adds a warning to all pickaxes (needs shift to show)
-        TooltipEntry pickaxeWarning = new TooltipEntry(
-                "#c:pickaxes",
-                new ArrayList<>(Arrays.asList("Warning: §eHeavy §rTool")),
-                TooltipEntry.TooltipStyle.SOLID,
-                new ArrayList<>(Arrays.asList("red")),
-                false, false, false, false, false,
-                true, true,
-                TooltipEntry.TooltipPosition.BOTTOM, 0,
-                0, 1L,
-                ""
-        );
+        /*
+         Adds a warning to all pickaxes (needs shift to show)
+         This is an example of a tooltip that was built but not registered to the API
+         The developer can now choose to register it whenever they want by calling
+         CustomTooltipApi.registerTooltip(entry);
+        */
+        TooltipEntry pickaxeWarning = TooltipEntry.builder("#c:pickaxes")
+                .addLine("Warning: §eHeavy §rTool")
+                .style(TooltipEntry.TooltipStyle.SOLID)
+                .colors("red")
+                .requireShift(true)
+                .emptyLineBefore(true)
+                .build();
 
-        CustomTooltipApi.registerTooltip(rainbowSword);
-        CustomTooltipApi.registerTooltip(rainbowSword2);
-        CustomTooltipApi.registerTooltip(godApple);
         CustomTooltipApi.registerTooltip(pickaxeWarning);
 
         LOGGER.info("API test successful.");
